# Project

./: .gitignore  CMakeLists.txt  Code.docx  Readme.md  build.bat  build2.bat  create_test_structure.bat  ~$Code.docx
Doc/html/: _application_8h_source.html  _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_application_8h-example.html  _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_logger_8h-example.html  _database_8h_source.html  _directory_scanner_8h_source.html  _hash_calculator_8h.html  _hash_calculator_8h_source.html  _report_8h_source.html  _string_utils_8h.html  _string_utils_8h.js  _string_utils_8h_source.html  annotated_dup.js  class_application-members.html  class_application.html  class_database-members.html  class_directory_scanner-members.html  class_directory_scanner.js  class_logger.js  class_report.js  class_string_utils.html  classes.html  dir_ffd1f789ec7bd0a45fc6ad92579c5070.html  doxygen_crawl.html  examples.html  file_handler_8h_source.html  files.html  functions.html  functions_func.html  navtreedata.js  navtreeindex0.js
Doc/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  classes_1.js  functions_0.js  functions_2.js  functions_6.js  functions_8.js  searchdata.js
Doc/latex/: _application_8h_source.tex  _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_application_8h-example.tex  _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_hash_calculator_8h-example.tex  _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_logger_8h-example.tex  _database_8h_source.tex  _directory_scanner_8h_source.tex  _hash_calculator_8h.tex  _hash_calculator_8h_source.tex  _logger_8h_source.tex  _report_8h_source.tex  _string_utils_8h.tex  _string_utils_8h_source.tex  annotated.tex  class_application.tex  class_database.tex  class_directory_scanner.tex  class_file_handler.tex  class_hash_calculator.tex  class_logger.tex  class_report.tex  class_string_utils.tex  examples.tex  file_handler_8h_source.tex  files.tex  refman.tex
scanDir/config/: global.cfg  users.json
scanDir/config/backup/: config.bak
scanDir/programs/browser/plugins/: video.plugin
scanDir/programs/game/saves/: progress.sav
scanDir/programs/utils/: config.json
scanDir/system/config/: security.cfg  system.ini
scanDir/system/drivers/: network.sys
scanDir/system/drivers/audio/: sound.drv
scanDir/temp/: download.tmp  session.data
scanDir/users/admin/scripts/: cleanup.ps1  deploy.bat
scanDir/users/john/desktop/: shortcut.lnk
scanDir/users/john/desktop/temp/: cache.tmp
scanDir/users/john/documents/personal/: notes.txt
scanDir/users/john/documents/work/: budget.xlsx  report.docx
scanDir/users/john/downloads/archive/: backup.rar
src/: Application.cpp  Application.h  Database.cpp  Database.h  DirectoryScanner.cpp  DirectoryScanner.h  FileHandler.cpp  FileScanner.cpp  FileScanner.h  HashCalculator.cpp  HashCalculator.h  Logger.cpp  Logger.h  Report.cpp  Report.h  StringUtils.h  fileHandler.h  testTask.cpp  text.csv
tests/: test_database.cpp  test_hash_calculator.cpp  test_report.cpp
Алексей_Надмитов_С++/: CMakeLists.txt  Readme.md  Readme.txt  build.bat
Алексей_Надмитов_С++/src/: Application.h  Database.h  DirectoryScanner.cpp  Logger.h  Report.cpp  Report.h  StringUtils.cpp  StringUtils.h  testTask.cpp
Алексей_Надмитов_С++/tests/: test_hash_calculator.cpp  test_main.cpp  test_report.cpp
Алексей_Надмитов_С++/Документация/html/: _c_1_2_users_2_lesha_2_desktop_2_test_task_kaspersky_2_project_2src_2_hash_calculator_8h-example.html  _hash_calculator_8h.js  _logger_8h_source.html  annotated.html  class_application.js  class_database.html  class_database.js  class_directory_scanner.html  class_file_handler-members.html  class_file_handler.html  class_file_handler.js  class_hash_calculator-members.html  class_hash_calculator.html  class_logger-members.html  class_logger.html  class_report-members.html  class_report.html  class_string_utils-members.html  dir_ca517da7c0ff3c5dcf7de7aebdabe148.html  dir_ca517da7c0ff3c5dcf7de7aebdabe148.js  examples.js  index.html
Алексей_Надмитов_С++/Документация/html/search/: all_4.js  all_7.js  all_8.js  classes_3.js  files_0.js  files_1.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js
